# cmeel-gperf

./: .cirrus.yml  .git-blame-ignore-revs  CMakeLists.txt  pyproject.toml
.github/workflows/: release.yml
