[build-system]
build-backend = "cmeel"
requires = ["cmeel-texinfo", "cmeel[build]"]

[project]
description = "cmeel distribution for gperf"
license = "GPL-3.0-only"
name = "cmeel-gperf"
requires-python = ">= 3.8"
version = "3.1"

[project.urls]
homepage = "https://github.com/cmake-wheel/cmeel-gperf"
repository = "https://github.com/cmake-wheel/cmeel-gperf.git"

[tool.cmeel]
build-number = 7
has-sitelib = false
run-tests = false

[tool.tomlsort]
all = true
